# fst-tools

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  License.txt  MANIFEST  Makefile  Makefile_original  README  README.md  README.org  SETUP.sh  accum.cdk90  anal_temp  bemol.F90  bemol.ftn90  bemol.h  bemol_opt.c  bm_closefiles.F90  bm_closefiles.ftn90  bm_coarse_wrt.ftn90  bm_core_wrt.F90  bm_openfiles.ftn90  bm_param_f90.h  bm_std_wrt.ftn90  bm_utils.c  bm_vanilla_wrt.ftn90  burp_2000  c_dies_process_flds.c  c_pgsm.c  c_pgsm_utils.c  calcul.ftn  cfldinf.cdk  champ.ftn  champ.ftn90  champ_seq.ftn  champ_seq.ftn90  champs.cdk90  char.cdk  charac.cdk  charac.cdk90  (+262 more)
bemol/: CMakeLists.txt  bemol.F90  bemol_opt.c  bemol_opt.h  bm_coarse_wrt.F90  bm_core_wrt.F90  bm_openfiles.F90  bm_param_f90.h  bm_std_wrt.F90  bm_utils.c  bm_vanilla_wrt.F90  bm_wrt_axay.F90  c_dies_process_flds.c  c_inventaire_tuiles.c  dies.c  diese.h  diese_funct.h  diese_var_e.h  diese_var_g.c  diese_var_g.h  ftnstrclean.c  statfld.F90
bemol/utils/zcrop/: fusion.F90  zcrop.F90
cmake/modules/: orgmanpages.cmake
editfst/: CMakeLists.txt  DlInterface.c  EXTRAS  Makefile  configuration.f90  convert_ip.h  convert_ip123.f90  copystx.f90  copystx.ftn  create_test_file.f90  critsup.f90  critsup.ftn  desire.f90  desire.ftn  dmpdes.f90  dmpdes.ftn  editfst.F90  editfst.f90  editfst.ftn  editfst.inc  entsort.f90  entsort.ftn  excdes.c  excdes.inc  excdes_new.c  exdes.F90  exdes.ftn  fermes.f90  fermes.ftn  fst_missing.c  fstd98.c  fstnol.f90  fstnol.ftn  holacar.f90  holacar.ftn  if_fstd98.c  if_xdf98.c  ip1equiv.f90  ip1equiv.ftn  julhr.f90  (+28 more)
editfst/ARCHIVE/: desrs.cdk  fiches.cdk  ip1equiv.f90  julhr.f90  lin128.cdk  logiq.cdk  maxprms.cdk  tapes.cdk
fstcomp/: CMakeLists.txt  fstcomp.f  statfldx.F90
fstcompress/: CMakeLists.txt  fstcompress.f90  fstuncompress.f90
fstdumpfld/: CMakeLists.txt
fstinfo/: CMakeLists.txt  fstinfo.f
fststat/: CMakeLists.txt  fststat.f  fststatm.f  loop_fields.F90  statfld4.F90  statfld4.f
fststat/code_ajout-stats-region/: fststat.f90  fststatm.f90  statfld4.f90
fstxml/: CMakeLists.txt  fst2xml.c  fst2xml_main.c  fst2xml_main.f  fst2xml_main.f90  interbidon.c  xml2fst.c  xml2fst_main.f  xml2fst_main.f90  xml2generic.c
pgsm/: CMakeLists.txt  accum.cdk90  blancs.cdk90  c_pgsm_utils.c  calcul.F90  champ.F90  champ_seq.F90  champs.cdk90  champseq.cdk90  charac.cdk90  chk_extrap.F90  chk_hy.F90  chk_tmpdir.c  chk_toctoc.F90  chkenrpos.F90  chmpdif.F90  comme.F90  conlalo.F90  conver.F90  convers.cdk90  convs.F90  coord.F90  coupe.F90  coupzm.F90  dates.cdk90  ecrits.F90  ecritur.F90  epais.F90  fillcoord.F90  fstcvt.F90  gdz.cdk90  grigrib.F90  grille2.F90  grilles.cdk90  griltp4.F90  gritp12.F90  heure.F90  idents.cdk90  impnone.cdk90  imprime.F90  (+47 more)
reflex/: CMakeLists.txt  Makefile  burp_original  main.F90  reflex.f
share/man/man1/: pgsm.org
src/bemol/: CMakeLists.txt  bemol_opt.c  bm_coarse_wrt.F90  bm_utils.c  bm_wrt_axay.F90  c_dies_process_flds.c  c_inventaire_tuiles.c  dies.c  diese.h  diese_var_e.h  diese_var_g.c  fillgrid.F90
src/bemol/utils/zcrop/: sous-grille.dir  zcrop.F90
src/dbzono/: CMakeLists.txt  README.md  bsort.f  ctescon.cdk  dbzono.f  dbzono.f90  debalzn.f  debalzn.f90  inctcon.f90  litzon.f90  make_cdk  outfld.f  outfld.f90  setuvd0.f  setuvd0.f90  writlzn.f  writlzn.f90
src/editfst/: CMakeLists.txt  README.md  configuration.f90  copystx.f90  create_test_file.f90  critsup.f90  desire.f90  dmpdes.f90  editfst.f90  fermes.f90  fstnol.f90  holacar.f90  main.F90  ouvred.f90  ouvres.f90  rewinds.f90  sautsqi.f90  sauvdez.f90  select.f90  setper.f90  sqicopi.f90  stdcopi.f90  testcase  weofile.f90  zap.f90
src/fstcomp/: CMakeLists.txt  README.md  fstcomp.F90  fstcomp.f90  statfldx.F90
src/fstcompress/: CMakeLists.txt  README.md  fstcompress.F90  fstcompress.f90  fstuncompress.F90  fstuncompress.f90
src/fstdumpfld/: CMakeLists.txt  fstdumpfld.c
src/fstinfo/: CMakeLists.txt  fstinfo.F90  fstinfo.f
src/fststat/: CMakeLists.txt  fststat.F90  loop_fields.F90  statfld4.F90
src/fstxml/: CMakeLists.txt  README.md  fst2xml.c  fst2xml_main.f90  interbidon.c  xml2fst.c  xml2fst_main.f90  xml2generic.c
src/pgsm/: CMakeLists.txt  README.md  accum.F90  accum.cdk90  c_pgsm_utils.c  calcul.F90  cfldinf.F90  cfldinf.cdk90  champ.F90  champ_seq.F90  champs.F90  champseq.F90  champseq.cdk90  chck.F90  chk_extrap.F90  chk_hy.F90  chk_tmpdir.c  chk_toctoc.F90  chk_userdate.F90  chkenrpos.F90  chmpdif.F90  comme.F90  conlalo.F90  conver.F90  convers.F90  convs.F90  coord.F90  copy2outputFile.F90  coupe.F90  coupzm.F90  defin.cdk90  ecrires.F90  ecrires.cdk90  ecrits.F90  ecritur.F90  enrege.cdk90  epais.F90  files.F90  fillcoord.F90  filtre.F90  (+82 more)
src/pgsm/doc/: DIRECTIVES.md
src/reflex/: CMakeLists.txt  README.md  reflex.F90  reflex.f90  version.in.inc
src/voir/: CMakeLists.txt  README.md  voir.F90  voir.f90  voir24.F90
src/zcrop/: CMakeLists.txt  sous-grille.fst  zcrop.F90
test/: editfst.dir  toto
tests/: CMakeLists.txt  README.md  generate_fst.c  pgsm.dir
tests/editfst/: 01_editfst_basic.sh  02_editfst_exclure.sh
utils/zcrop/: axay2  fusion.ftn90  zcrop.ftn90
voir/: CMakeLists.txt  voir.f90
